force-app/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <description>Cars</description>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>