force-app/main/default/objects/Car__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Car owner</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>