force-app/main/default/objects/Car__c/fields/Car_Image__c.field-meta.xml
<CustomField>
    <fullName>Car_Image__c</fullName>
    <description>Car image</description>
    <formula>IMAGE(Picture__c,  Name )</formula>
    <label>Car Image</label>
    <type>Text</type>
</CustomField>