force-app/main/default/objects/Car__c/fields/ExternalCarId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCarId__c</fullName>
    <description>Provider car Id</description>
    <externalId>true</externalId>
    <label>ExternalCarId</label>
    <length>14</length>
    <type>Text</type>
</CustomField>