force-app/main/default/objects/Car__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <description>Car image url</description>
    <label>Picture</label>
    <type>Url</type>
</CustomField>